# OSCam

./: .gitignore  CHANGELOG.md  HANDOFF.md  README.md  annotations.py  ca.json  ca_lib.py  ca_measure.py  calibrate.py  camera_backend.py  debayer.py  export.py  focus.py  frame_average.py  gallery.py  hdr_from_session.py  hdr_merge.py  measure.py  pixel_hash.py  process_wizard.py  profile.json  provenance.py  publish.py  qt_shell.py  stacks.py  test_burst_backend.py  wizard_pages.py
WebUI/: index.html  script.js  style.css
themes/dark/: style.qss
zynergy-imaging/: README.md  pyproject.toml
zynergy-imaging/src/zynergy_imaging/: __init__.py  capture.py  zstack_process.py
